<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/background_yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"
            android:drawableStart="@mipmap/envelope"
            android:drawablePadding="10dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/label_email"
            app:layout_constraintBottom_toTopOf="@+id/input_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_marginTop="16dp"
            android:drawableStart="@mipmap/padlock"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/label_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/input_email"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/input_email"
            app:layout_constraintTop_toBottomOf="@+id/input_email" />

        <EditText
            android:id="@+id/repeat_password"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_marginTop="16dp"
            android:drawableStart="@mipmap/padlock"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/input_email"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/input_email"
            app:layout_constraintTop_toBottomOf="@+id/input_password" />

        <Button
            android:id="@+id/button_connection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/round_btn"
            android:text="@string/connection"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/input_password"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/input_password" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>